# GeneSight-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
results/tables/: knn_evaluation_metrics.csv
src/: data_processor.py  estatistic_analysis.py  metrics.py  model_pipeline.py  visualizer.py
src/utils/: logger.py
